<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signalstrength_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/signal_strength"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signal_seekbar" />

        <TextView
            android:id="@+id/signalstrength_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 dbm"
            app:layout_constraintBaseline_toBaselineOf="@+id/signalstrength_label_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signalstrength_label_textview" />

        <TextView
            android:id="@+id/provider_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/provider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connection_label_textview" />

        <TextView
            android:id="@+id/provider_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Unknown"
            app:layout_constraintBaseline_toBaselineOf="@+id/provider_label_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signalstrength_label_textview" />

        <TextView
            android:id="@+id/connection_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/connection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signalstrength_label_textview" />

        <TextView
            android:id="@+id/connection_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="LTE"
            app:layout_constraintBaseline_toBaselineOf="@+id/connection_label_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signalstrength_label_textview" />

        <SeekBar
            android:id="@+id/signal_seekbar"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:max="100"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:progress="50"
            android:progressDrawable="@drawable/seekbar_style"
            android:thumb="@drawable/custom_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/signal_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:max="50"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signalstrength_textview"
            app:layout_constraintTop_toBottomOf="@+id/signal_seekbar" />

    </android.support.constraint.ConstraintLayout>

    <ca.hss.heatmaplib.HeatMap
        android:id="@+id/signal_heatmap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:maxOpacity="255"
        app:minOpacity="0" />

</android.support.constraint.ConstraintLayout>